--- a/test/e2e/resources/full-chart-install.yaml
+++ b/test/e2e/resources/full-chart-install.yaml
@@ -1386,6 +1386,11 @@ spec:
                         description: RecoverPanic indicates if panics should be recovered.
                         type: boolean
                     type: object
+                  crdPattern:
+                    description: |-
+                      CRDPattern is a regular expression that matches the CRDs that the provider
+                      is expected to manage.
+                    type: string
                   featureGates:
                     additionalProperties:
                       type: boolean
@@ -4589,6 +4594,11 @@ spec:
                         description: RecoverPanic indicates if panics should be recovered.
                         type: boolean
                     type: object
+                  crdPattern:
+                    description: |-
+                      CRDPattern is a regular expression that matches the CRDs that the provider
+                      is expected to manage.
+                    type: string
                   featureGates:
                     additionalProperties:
                       type: boolean
@@ -7794,6 +7804,11 @@ spec:
                         description: RecoverPanic indicates if panics should be recovered.
                         type: boolean
                     type: object
+                  crdPattern:
+                    description: |-
+                      CRDPattern is a regular expression that matches the CRDs that the provider
+                      is expected to manage.
+                    type: string
                   featureGates:
                     additionalProperties:
                       type: boolean
@@ -10998,6 +11013,11 @@ spec:
                         description: RecoverPanic indicates if panics should be recovered.
                         type: boolean
                     type: object
+                  crdPattern:
+                    description: |-
+                      CRDPattern is a regular expression that matches the CRDs that the provider
+                      is expected to manage.
+                    type: string
                   featureGates:
                     additionalProperties:
                       type: boolean
@@ -14203,6 +14223,11 @@ spec:
                         description: RecoverPanic indicates if panics should be recovered.
                         type: boolean
                     type: object
+                  crdPattern:
+                    description: |-
+                      CRDPattern is a regular expression that matches the CRDs that the provider
+                      is expected to manage.
+                    type: string
                   featureGates:
                     additionalProperties:
                       type: boolean
@@ -15822,6 +15847,11 @@ spec:
                         description: RecoverPanic indicates if panics should be recovered.
                         type: boolean
                     type: object
+                  crdPattern:
+                    description: |-
+                      CRDPattern is a regular expression that matches the CRDs that the provider
+                      is expected to manage.
+                    type: string
                   featureGates:
                     additionalProperties:
                       type: boolean
@@ -17442,6 +17472,11 @@ spec:
                         description: RecoverPanic indicates if panics should be recovered.
                         type: boolean
                     type: object
+                  crdPattern:
+                    description: |-
+                      CRDPattern is a regular expression that matches the CRDs that the provider
+                      is expected to manage.
+                    type: string
                   featureGates:
                     additionalProperties:
                       type: boolean
