--- a/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_coreproviders.yaml
@@ -2954,6 +2954,11 @@ spec:
                         description: RecoverPanic indicates if panics should be recovered.
                         type: boolean
                     type: object
+                  crdPattern:
+                    description: |-
+                      CRDPattern is a regular expression that matches the CRDs that the provider
+                      is expected to manage.
+                    type: string
                   featureGates:
                     additionalProperties:
                       type: boolean
