--- a/hack/charts/cluster-api-operator/templates/infra.yaml
+++ b/hack/charts/cluster-api-operator/templates/infra.yaml
@@ -56,6 +56,9 @@ spec:
   {{- end }}
 {{- end }}
 {{- end }}
+{{- if $.Values.manager.crdPattern }}
+    crdPattern: {{ $.Values.manager.crdPattern }}
+{{- end }}
 {{- end }}
 {{- if $.Values.configSecret.name }}
   configSecret:
