--- a/test/e2e/resources/full-chart-install.yaml
+++ b/test/e2e/resources/full-chart-install.yaml
@@ -17862,7 +17862,7 @@ spec:
         - --leader-elect=true
         command:
         - /manager
-        image: "gcr.io/k8s-staging-capi-operator/cluster-api-operator:dev"
+        image: "quillie/cluster-api-operator-amd64:dev"
         imagePullPolicy: IfNotPresent
         name: manager
         ports:
